--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -21,7 +21,6 @@
   background-color: #fff;
   padding: 32px 50px;
   max-width: 730px;
-  width: 100%;
   box-sizing: border-box;
   position: relative;
   border-radius: 8px;
@@ -31,13 +30,12 @@
   padding: 0;
   background-color: rgba(0, 0, 0, 0);
   border-radius: 8px;
-  max-width: 60vw;
 }
 
 .modal__image {
-  width: 100%;
+  max-height: 60vh;
+  max-width: 100vw;
   border-radius: 8px;
-  max-height: 80vh;
   object-fit: contain;
 }
 
@@ -51,6 +49,7 @@
   border: none;
   background-color: #fff;
   background-image: url(../images/close_button.svg);
+  background-position: center;
 }
 
 .modal__close_type_preview {
@@ -65,8 +64,10 @@
 
 .modal__caption {
   margin: 0;
-  width: 135px;
-  height: 32px;
+  align-content: center;
+  width: fit-content;
+  height: auto;
+  padding: 5px;
   background-color: #212121;
   color: #fff;
   border-radius: 8px;
@@ -82,6 +83,7 @@
   border: none;
   cursor: pointer;
   background-image: url(../images/close_button_hover.svg);
+  background-position: center;
 }
 
 .modal__title {
@@ -128,9 +130,17 @@
   padding: 18px 0;
 }
 
+.modal__form {
+  width: 600px;
+}
+
 @media screen and (max-width: 627px) {
   .modal {
     padding: 0 10px;
+  }
+
+  .modal_form {
+    width: 400px;
   }
 
   .modal__container {
@@ -153,7 +163,6 @@
     font-size: 16px;
     line-height: 1;
     color: #212121;
-    opacity: 30%;
   }
 
   .modal__label {
