--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -26,17 +26,18 @@
   border-radius: 8px;
 }
 
-.modal__content-type_preview {
+.modal__container-type_preview {
   padding: 0;
   background-color: rgba(0, 0, 0, 0);
   border-radius: 8px;
 }
 
 .modal__image {
-  max-height: 60vh;
-  max-width: 100vw;
+  max-height: 80vh;
+  max-width: 80vw;
   border-radius: 8px;
   object-fit: contain;
+  overflow: hidden;
 }
 
 .modal__close-btn {
@@ -139,19 +140,31 @@
     padding: 0 10px;
   }
 
-  .modal_form {
-    width: 400px;
+  .modal__form {
+    max-width: 276px;
   }
 
   .modal__container {
     padding: 12px;
+    max-width: 300px;
+    max-height: 336px;
+  }
+
+  .modal__container-type_preview {
+    max-width: 80vw;
+    max-height: 80vh;
+    padding: 0;
   }
 
   .modal__title {
     font-size: 20px;
     line-height: 1;
     margin-bottom: 24px;
-    margin: 10px 0 34px;
+    margin: 10px 0 24px;
+  }
+
+  .modal__caption {
+    font-size: 16px;
   }
 
   .modal__close-btn {
@@ -159,17 +172,26 @@
     right: 12px;
   }
 
+  .modal__close-type_preview {
+    top: -52px;
+    right: 0;
+  }
+
   .modal__input {
     font-size: 16px;
     line-height: 1;
     color: #212121;
+    max-width: 257px;
+    max-height: 48px;
   }
 
   .modal__label {
     margin-bottom: 24px;
+    max-width: 257px;
   }
 
   .modal__submit-btn {
     width: 100%;
+    max-width: 257px;
   }
 }
